# Agentic-QA-v1

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README_pl.md  START.md  START_pl.md  docker-compose.yml  pyproject.toml  run-tests.sh
config/: agentic-os.yml  agentic-os.yml.example  provider-rates.yml  skills.yml
docs/: README.md  architecture.md  architecture_pl.md  bug-aware-policy.md  bug-aware-policy_pl.md  cli-contract.md  cli-contract_pl.md  dashboard-help.md  dashboard-help_pl.md  dashboard-inbox-task-generation.md  dashboard-inbox-task-generation_pl.md  dashboard-operator-flow-analysis.md  dashboard-operator-flow-analysis_pl.md  database-schema.md  database-schema_pl.md  design-tokens.md  design-tokens_pl.md  docker-networking-contract.md  docker-networking-contract_pl.md  docker-volume-contract.md  docker-volume-contract_pl.md  github-issues-implementation-plan.md  github-issues-implementation-plan_pl.md  operator-guide.md  operator-guide_pl.md  rc-readiness-analysis.md  rc-readiness-analysis_pl.md  rc-remediation-proposal.md  rc-remediation-proposal_pl.md  runtime-contract.md  runtime-contract_pl.md  runtime-root-skills-quality.md  runtime-root-skills-quality_pl.md  security-trust-boundary.md  security-trust-boundary_pl.md  severity-policy.md  severity-policy_pl.md  troubleshooting.md  troubleshooting_pl.md  two-mode-execution-contract.md  (+1 more)
inbox/: README.md
input/: README.md
output/: README.md
pretask/: README.md
scripts/: agentic-os.sh  assertion-guard.py  build-summary.sh  copy-reports.sh  coverage-matrix.sh  extract-last-run.sh  new-bug.sh
skills/: README.md  README_pl.md  _preamble_claude.md  _preamble_codex.md  (+1 more)
(+421 files in other folders)
